我做了新增頭盔的修改

--- a/production_information.html
+++ b/production_information.html
@@ -198,7 +198,7 @@
                 </div>
                 <div class="p-2">
                     <label class="btn btn-outline-dark" for="btn-check-outlined1"><a
-                            href="production_information.html?type=弓"></a></label><br />
+                            href="production_information.html?type=頭盔">頭盔</a></label><br />
                 </div>
                 <div class="p-2">
                     <label class="btn btn-outline-dark" for="btn-check-outlined1"><a
