我改了鎧甲

--- a/production_information.html
+++ b/production_information.html
@@ -202,7 +202,7 @@
                 </div>
                 <div class="p-2">
                     <label class="btn btn-outline-dark" for="btn-check-outlined1"><a
-                            href="production_information.html?type=劍"></a></label><br />
+                            href="production_information.html?type=鎧甲">鎧甲</a></label><br />
                 </div>
                 <div class="p-2">
                     <label class="btn btn-outline-dark" for="btn-check-outlined1"><a
