--- a/role_related.html
+++ b/role_related.html
@@ -1,1 +1,155 @@
-<img style="display: block;-webkit-user-select: none;margin: auto;cursor: zoom-in;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="https://2.bp.blogspot.com/-isMsCvB7XM4/WquVs5LwzSI/AAAAAAAAM6o/BANm3e7zxVI8PF3eCmddfp3dHhzBdMKUwCPcBGAYYCw/s1600/construction.png" width="931" height="462">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+</head>
+
+<!-- CSS only -->
+<link rel="stylesheet" href="search.css" />
+<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
+    crossorigin="anonymous" />
+<!-- JavaScript Bundle with Popper 5.2.2 -->
+<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script> -->
+
+<!-- Bootstrap 4.0.0 -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+
+<!-- Jquery -->
+<script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/1.0.21/jquery.csv.js"></script>
+
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.21.1/dist/bootstrap-table.min.css" />
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://unpkg.com/bootstrap-table@1.21.1/dist/bootstrap-table.min.js"></script>
+<!-- Latest compiled and minified Locales -->
+<script src="https://unpkg.com/bootstrap-table@1.21.1/dist/locale/bootstrap-table-zh-CN.min.js"></script>
+
+
+<link rel="stylesheet" href="bootstrap.scss">
+
+<body>
+    <!-- Header -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">魔力寶貝超強官網</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <!-- 還沒做完 -->
+                    <span><a class="nav-link" href="index.html">首頁</a></span>
+                </li>
+                <li class="nav-item dropdown">
+                    <!-- 做完 -->
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink1" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        採集資料
+                    </a>
+                    <!-- .dropdown-menu 下拉選單內容 -->
+                    <div style="padding: 0; margin:0;" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink1">
+                        <a class="dropdown-item" href="collect_data.html?type=挖礦">挖礦</a>
+                        <a class="dropdown-item" href="collect_data.html?type=狩獵">狩獵</a>
+                        <a class="dropdown-item" href="collect_data.html?type=伐木">伐木</a>
+                        <a class="dropdown-item" href="collect_data.html?type=製作用布販賣點">製作用布販賣點</a>
+                    </div>
+                </li>
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        製作資料
+                    </a>
+                    <!-- .dropdown-menu 下拉選單內容 -->
+                    <div style="padding: 0; margin:0;" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <h6 class="dropdown-title"><b>重型武器-橫掃競技場</b></h6>
+                        <a class="dropdown-item" href="production_information.html?type=劍">劍</a>
+                        <a class="dropdown-item" href="production_information.html?type=斧">斧</a>
+                        <a class="dropdown-item" href="production_information.html?type=槍">槍</a>
+                        <a class="dropdown-item" href="production_information.html?type=弓">弓</a>
+                        <h6 class="dropdown-title"><b>輕型武器-打爆冰樹</b></h6>
+                        <a class="dropdown-item" href="#">小刀</a>
+                        <a class="dropdown-item" href="#">杖</a>
+                        <a class="dropdown-item" href="#">迴力</a>
+                        <h6 class="dropdown-title"><b>重型防具-讓三龍害怕</b></h6>
+                        <a class="dropdown-item" href="#">盔</a>
+                        <a class="dropdown-item" href="#">鎧甲</a>
+                        <a class="dropdown-item" href="#">靴子</a>
+                        <a class="dropdown-item" href="#">盾</a>
+                        <h6 class="dropdown-title"><b>輕型防具-真的輕</b></h6>
+                        <a class="dropdown-item" href="#">帽子</a>
+                        <a class="dropdown-item" href="#">衣服</a>
+                        <a class="dropdown-item" href="#">鞋子</a>
+                        <a class="dropdown-item" href="#">袍</a>
+                        <h6 class="dropdown-title"><b>仙丹妙藥</b></h6>
+                        <a class="dropdown-item" href="#">料理</a>
+                        <a class="dropdown-item" href="#">藥水</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        技能資料
+                    </a>
+                    <!-- .dropdown-menu 下拉選單內容 -->
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="#">人物技能</a>
+                        <a class="dropdown-item" href="#">人物技能(New)</a>
+                        <a class="dropdown-item" href="#">寵物技能</a>
+                        <a class="dropdown-item" href="#">技能屋進入証</a>
+                        <a class="dropdown-item" href="#">寵物技能屋</a>
+                        <a class="dropdown-item" href="#">耗魔變化道具</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="pet_information.html">寵物資料</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="role_related.html">角色相關</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="pet_equipment.html">寵物裝備資料</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="prop_library.html">初心道具</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="game_task.html">遊戲任務</a>
+
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="gashapon_library.html">扭蛋資料</a>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
+    <img style="display: block;-webkit-user-select: none;margin: auto;cursor: zoom-in;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;"
+        src="https://2.bp.blogspot.com/-isMsCvB7XM4/WquVs5LwzSI/AAAAAAAAM6o/BANm3e7zxVI8PF3eCmddfp3dHhzBdMKUwCPcBGAYYCw/s1600/construction.png"
+        width="931" height="462">
+
+</body>
+
+</html>
