--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 <link rel="stylesheet" href="bootstrap.scss">
 
 <body>
+  <!-- Header -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">魔力寶貝超強官網</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -61,49 +62,49 @@
         <li class="nav-item dropdown">
           <!-- 做完 -->
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink1" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              採集資料
-            </a>
-            <!-- .dropdown-menu 下拉選單內容 -->
-            <div style="padding: 0; margin:0;" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink1">
-              <a class="dropdown-item" href="collect_data.html?type=挖礦">挖礦</a>
-              <a class="dropdown-item" href="collect_data.html?type=狩獵">狩獵</a>
-              <a class="dropdown-item" href="collect_data.html?type=伐木">伐木</a>
-              <a class="dropdown-item" href="collect_data.html?type=製作用布販賣點">製作用布販賣點</a>
-            </div>
+            aria-haspopup="true" aria-expanded="false">
+            採集資料
+          </a>
+          <!-- .dropdown-menu 下拉選單內容 -->
+          <div style="padding: 0; margin:0;" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink1">
+            <a class="dropdown-item" href="collect_data.html?type=挖礦">挖礦</a>
+            <a class="dropdown-item" href="collect_data.html?type=狩獵">狩獵</a>
+            <a class="dropdown-item" href="collect_data.html?type=伐木">伐木</a>
+            <a class="dropdown-item" href="collect_data.html?type=製作用布販賣點">製作用布販賣點</a>
+          </div>
         </li>
 
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              製作資料
-            </a>
-            <!-- .dropdown-menu 下拉選單內容 -->
-            <div style="padding: 0; margin:0;" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <h6 class="dropdown-title"><b>重型武器-橫掃競技場</b></h6>
-              <a class="dropdown-item" href="production_information.html?type=劍">劍</a>
-              <a class="dropdown-item" href="production_information.html?type=斧">斧</a>
-              <a class="dropdown-item" href="production_information.html?type=槍">槍</a>
-              <a class="dropdown-item" href="production_information.html?type=弓">弓</a>
-              <h6 class="dropdown-title"><b>輕型武器-打爆冰樹</b></h6>
-              <a class="dropdown-item" href="#">小刀</a>
-              <a class="dropdown-item" href="#">杖</a>
-              <a class="dropdown-item" href="#">迴力</a>
-              <h6 class="dropdown-title"><b>重型防具-讓三龍害怕</b></h6>
-              <a class="dropdown-item" href="#">盔</a>
-              <a class="dropdown-item" href="#">鎧甲</a>
-              <a class="dropdown-item" href="#">靴子</a>
-              <a class="dropdown-item" href="#">盾</a>
-              <h6 class="dropdown-title"><b>輕型防具-真的輕</b></h6>
-              <a class="dropdown-item" href="#">帽子</a>
-              <a class="dropdown-item" href="#">衣服</a>
-              <a class="dropdown-item" href="#">鞋子</a>
-              <a class="dropdown-item" href="#">袍</a>
-              <h6 class="dropdown-title"><b>仙丹妙藥</b></h6>
-              <a class="dropdown-item" href="#">料理</a>
-              <a class="dropdown-item" href="#">藥水</a>
-            </div>
-          </li>
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            製作資料
+          </a>
+          <!-- .dropdown-menu 下拉選單內容 -->
+          <div style="padding: 0; margin:0;" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <h6 class="dropdown-title"><b>重型武器-橫掃競技場</b></h6>
+            <a class="dropdown-item" href="production_information.html?type=劍">劍</a>
+            <a class="dropdown-item" href="production_information.html?type=斧">斧</a>
+            <a class="dropdown-item" href="production_information.html?type=槍">槍</a>
+            <a class="dropdown-item" href="production_information.html?type=弓">弓</a>
+            <h6 class="dropdown-title"><b>輕型武器-打爆冰樹</b></h6>
+            <a class="dropdown-item" href="#">小刀</a>
+            <a class="dropdown-item" href="#">杖</a>
+            <a class="dropdown-item" href="#">迴力</a>
+            <h6 class="dropdown-title"><b>重型防具-讓三龍害怕</b></h6>
+            <a class="dropdown-item" href="#">盔</a>
+            <a class="dropdown-item" href="#">鎧甲</a>
+            <a class="dropdown-item" href="#">靴子</a>
+            <a class="dropdown-item" href="#">盾</a>
+            <h6 class="dropdown-title"><b>輕型防具-真的輕</b></h6>
+            <a class="dropdown-item" href="#">帽子</a>
+            <a class="dropdown-item" href="#">衣服</a>
+            <a class="dropdown-item" href="#">鞋子</a>
+            <a class="dropdown-item" href="#">袍</a>
+            <h6 class="dropdown-title"><b>仙丹妙藥</b></h6>
+            <a class="dropdown-item" href="#">料理</a>
+            <a class="dropdown-item" href="#">藥水</a>
+          </div>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
@@ -145,6 +146,9 @@
 
 
   <h1 class="loader"></h1>
+  <main>
+
+  </main>
 
   <style>
     .loader {
@@ -243,17 +247,23 @@
 
 
     body {
+      background: #e1faff;
+      overflow-x: hidden;
+    }
+
+    main {
       background: url('images/body-bg.png') no-repeat #e1faff;
       background-size: cover;
-      background-position-y: -140%;
-
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 250px;
     }
+
     .dropdown-item:hover {
       opacity: .4;
       color: rgb(253, 0, 0);
     }
-
-    
   </style>
 
   <!-- <audio autoplay="true" >
