--- a/pet_information.html
+++ b/pet_information.html
@@ -46,6 +46,7 @@
 <!-- <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script> -->
 
 <body>
+  <!-- Header -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">魔力寶貝超強官網</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -58,18 +59,66 @@
           <!-- 還沒做完 -->
           <span><a class="nav-link" href="index.html">首頁</a></span>
         </li>
-        <li class="nav-item">
+        <li class="nav-item dropdown">
           <!-- 做完 -->
-          <a class="nav-link" href="collect_data.html">採集資料</a>
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink1" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            採集資料
+          </a>
+          <!-- .dropdown-menu 下拉選單內容 -->
+          <div style="padding: 0; margin:0;" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink1">
+            <a class="dropdown-item" href="collect_data.html?type=挖礦">挖礦</a>
+            <a class="dropdown-item" href="collect_data.html?type=狩獵">狩獵</a>
+            <a class="dropdown-item" href="collect_data.html?type=伐木">伐木</a>
+            <a class="dropdown-item" href="collect_data.html?type=製作用布販賣點">製作用布販賣點</a>
+          </div>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="product_data.html">製作資料</a>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            製作資料
+          </a>
+          <!-- .dropdown-menu 下拉選單內容 -->
+          <div style="padding: 0; margin:0;" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <h6 class="dropdown-title"><b>重型武器-橫掃競技場</b></h6>
+            <a class="dropdown-item" href="production_information.html?type=劍">劍</a>
+            <a class="dropdown-item" href="production_information.html?type=斧">斧</a>
+            <a class="dropdown-item" href="production_information.html?type=槍">槍</a>
+            <a class="dropdown-item" href="production_information.html?type=弓">弓</a>
+            <h6 class="dropdown-title"><b>輕型武器-打爆冰樹</b></h6>
+            <a class="dropdown-item" href="#">小刀</a>
+            <a class="dropdown-item" href="#">杖</a>
+            <a class="dropdown-item" href="#">迴力</a>
+            <h6 class="dropdown-title"><b>重型防具-讓三龍害怕</b></h6>
+            <a class="dropdown-item" href="#">盔</a>
+            <a class="dropdown-item" href="#">鎧甲</a>
+            <a class="dropdown-item" href="#">靴子</a>
+            <a class="dropdown-item" href="#">盾</a>
+            <h6 class="dropdown-title"><b>輕型防具-真的輕</b></h6>
+            <a class="dropdown-item" href="#">帽子</a>
+            <a class="dropdown-item" href="#">衣服</a>
+            <a class="dropdown-item" href="#">鞋子</a>
+            <a class="dropdown-item" href="#">袍</a>
+            <h6 class="dropdown-title"><b>仙丹妙藥</b></h6>
+            <a class="dropdown-item" href="#">料理</a>
+            <a class="dropdown-item" href="#">藥水</a>
+          </div>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             技能資料
           </a>
+          <!-- .dropdown-menu 下拉選單內容 -->
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="#">人物技能</a>
+            <a class="dropdown-item" href="#">人物技能(New)</a>
+            <a class="dropdown-item" href="#">寵物技能</a>
+            <a class="dropdown-item" href="#">技能屋進入証</a>
+            <a class="dropdown-item" href="#">寵物技能屋</a>
+            <a class="dropdown-item" href="#">耗魔變化道具</a>
+          </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="pet_information.html">寵物資料</a>
@@ -78,14 +127,23 @@
           <a class="nav-link" href="role_related.html">角色相關</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="npc_information.html">NPC資料</a>
+          <a class="nav-link" href="pet_equipment.html">寵物裝備資料</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="prop_library.html">道具庫</a>
+          <a class="nav-link" href="prop_library.html">初心道具</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="game_task.html">遊戲任務</a>
+
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="gashapon_library.html">扭蛋資料</a>
+        </li>
+
       </ul>
     </div>
   </nav>
+
 
   <!-- 首頁 -->
   <main>
