製作資料 武器和防具 補足

--- a/index.html
+++ b/index.html
@@ -87,22 +87,22 @@
             <a class="dropdown-item" href="production_information.html?type=槍">槍</a>
             <a class="dropdown-item" href="production_information.html?type=弓">弓</a>
             <h6 class="dropdown-title"><b>輕型武器-打爆冰樹</b></h6>
-            <a class="dropdown-item" href="#">小刀</a>
-            <a class="dropdown-item" href="#">杖</a>
-            <a class="dropdown-item" href="#">迴力</a>
+            <a class="dropdown-item" href="production_information.html?type=小刀">小刀</a>
+            <a class="dropdown-item" href="production_information.html?type=杖">杖</a>
+            <a class="dropdown-item" href="production_information.html?type=迴力鏢">迴力鏢</a>
             <h6 class="dropdown-title"><b>重型防具-讓三龍害怕</b></h6>
-            <a class="dropdown-item" href="#">盔</a>
-            <a class="dropdown-item" href="#">鎧甲</a>
-            <a class="dropdown-item" href="#">靴子</a>
-            <a class="dropdown-item" href="#">盾</a>
+            <a class="dropdown-item" href="production_information.html?type=盔">盔</a>
+            <a class="dropdown-item" href="production_information.html?type=鎧甲">鎧甲</a>
+            <a class="dropdown-item" href="production_information.html?type=靴子">靴子</a>
+            <a class="dropdown-item" href="production_information.html?type=盾">盾</a>
             <h6 class="dropdown-title"><b>輕型防具-真的輕</b></h6>
-            <a class="dropdown-item" href="#">帽子</a>
-            <a class="dropdown-item" href="#">衣服</a>
-            <a class="dropdown-item" href="#">鞋子</a>
-            <a class="dropdown-item" href="#">袍</a>
+            <a class="dropdown-item" href="production_information.html?type=帽子">帽子</a>
+            <a class="dropdown-item" href="production_information.html?type=衣服">衣服</a>
+            <a class="dropdown-item" href="production_information.html?type=鞋子">鞋子</a>
+            <a class="dropdown-item" href="production_information.html?type=袍">袍</a>
             <h6 class="dropdown-title"><b>仙丹妙藥</b></h6>
-            <a class="dropdown-item" href="#">料理</a>
-            <a class="dropdown-item" href="#">藥水</a>
+            <a class="dropdown-item" href="production_information.html?type=料理">料理</a>
+            <a class="dropdown-item" href="production_information.html?type=藥水">藥水</a>
           </div>
         </li>
         <li class="nav-item dropdown">
