--- a/production_information.html
+++ b/production_information.html
@@ -116,22 +116,22 @@
                         <a class="dropdown-item" href="production_information.html?type=槍">槍</a>
                         <a class="dropdown-item" href="production_information.html?type=弓">弓</a>
                         <h6 class="dropdown-title"><b>輕型武器-打爆冰樹</b></h6>
-                        <a class="dropdown-item" href="#">小刀</a>
-                        <a class="dropdown-item" href="#">杖</a>
-                        <a class="dropdown-item" href="#">迴力</a>
+                        <a class="dropdown-item" href="production_information.html?type=小刀">小刀</a>
+                        <a class="dropdown-item" href="production_information.html?type=杖">杖</a>
+                        <a class="dropdown-item" href="production_information.html?type=迴力鏢">迴力鏢</a>
                         <h6 class="dropdown-title"><b>重型防具-讓三龍害怕</b></h6>
-                        <a class="dropdown-item" href="#">盔</a>
-                        <a class="dropdown-item" href="#">鎧甲</a>
-                        <a class="dropdown-item" href="#">靴子</a>
-                        <a class="dropdown-item" href="#">盾</a>
+                        <a class="dropdown-item" href="production_information.html?type=盔">盔</a>
+                        <a class="dropdown-item" href="production_information.html?type=鎧甲">鎧甲</a>
+                        <a class="dropdown-item" href="production_information.html?type=靴子">靴子</a>
+                        <a class="dropdown-item" href="production_information.html?type=盾">盾</a>
                         <h6 class="dropdown-title"><b>輕型防具-真的輕</b></h6>
-                        <a class="dropdown-item" href="#">帽子</a>
-                        <a class="dropdown-item" href="#">衣服</a>
-                        <a class="dropdown-item" href="#">鞋子</a>
-                        <a class="dropdown-item" href="#">袍</a>
+                        <a class="dropdown-item" href="production_information.html?type=帽子">帽子</a>
+                        <a class="dropdown-item" href="production_information.html?type=衣服">衣服</a>
+                        <a class="dropdown-item" href="production_information.html?type=鞋子">鞋子</a>
+                        <a class="dropdown-item" href="production_information.html?type=袍">袍</a>
                         <h6 class="dropdown-title"><b>仙丹妙藥</b></h6>
-                        <a class="dropdown-item" href="#">料理</a>
-                        <a class="dropdown-item" href="#">藥水</a>
+                        <a class="dropdown-item" href="production_information.html?type=料理">料理</a>
+                        <a class="dropdown-item" href="production_information.html?type=藥水">藥水</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -209,7 +209,7 @@
                 </div>
                 <div class="p-2">
                     <label class="btn btn-outline-dark" for="btn-check-outlined1"><a
-                            href="production_information.html?type=頭盔">頭盔</a></label><br />
+                            href="production_information.html?type=盔">盔</a></label><br />
                 </div>
                 <div class="p-2">
                     <label class="btn btn-outline-dark" for="btn-check-outlined1"><a
@@ -217,32 +217,35 @@
                 </div>
                 <div class="p-2">
                     <label class="btn btn-outline-dark" for="btn-check-outlined1"><a
-                            href="production_information.html?type=斧"></a></label><br />
+                            href="production_information.html?type=靴子">靴子</a></label><br />
                 </div>
                 <div class="p-2">
                     <label class="btn btn-outline-dark" for="btn-check-outlined1"><a
-                            href="production_information.html?type=槍"></a></label><br />
+                            href="production_information.html?type=盾">盾</a></label><br />
                 </div>
                 <div class="p-2">
                     <label class="btn btn-outline-dark" for="btn-check-outlined1"><a
-                            href="production_information.html?type=弓"></a></label><br />
+                            href="production_information.html?type=帽子">帽子</a></label><br />
                 </div>
                 <div class="p-2">
                     <label class="btn btn-outline-dark" for="btn-check-outlined1"><a
-                            href="production_information.html?type=小刀"></a></label><br />
+                            href="production_information.html?type=衣服">衣服</a></label><br />
                 </div>
                 <div class="p-2">
                     <label class="btn btn-outline-dark" for="btn-check-outlined1"><a
-                            href="production_information.html?type=杖"></a></label><br />
+                            href="production_information.html?type=鞋子">鞋子</a></label><br />
                 </div>
                 <div class="p-2">
                     <label class="btn btn-outline-dark" for="btn-check-outlined1"><a
-                            href="production_information.html?type=迴力鏢"></a></label><br />
+                            href="production_information.html?type=袍">袍</a></label><br />
                 </div>
                 <div class="p-2">
                     <label class="btn btn-outline-dark" for="btn-check-outlined1"><a
-                            href="production_information.html?type=弓"></a></label><br />
-                    <!-- TODO:其他武器還沒有加上去 -->
+                            href="production_information.html?type=藥水">藥水</a></label><br />
+                </div>
+                    <div class="p-2">
+                        <label class="btn btn-outline-dark" for="btn-check-outlined1"><a
+                             href="production_information.html?type=料理">料理</a></label><br />    
                 </div>
             </div>
 
@@ -297,7 +300,7 @@
                 },
                 {
                     type: "斧",
-                    fileName: "ax.txt"
+                    fileName: "ax.txt" 
                 },
                 {
                     type: "槍",
@@ -310,6 +313,54 @@
                 {
                     type: "小刀",
                     fileName: "knife.txt"
+                },
+                {
+                    type: "杖",
+                    fileName: "magic_wand.txt"
+                },
+                {
+                    type: "迴力鏢",
+                    fileName: "boomerang.txt"
+                },
+                {
+                    type: "盔",
+                    fileName: "helmet.txt"
+                },
+                {
+                    type: "鎧甲",
+                    fileName: "armor.txt"
+                },
+                {
+                    type: "靴子",
+                    fileName: "boots.txt"
+                },
+                {
+                    type: "盾",
+                    fileName: "shield.txt"
+                },
+                {
+                    type: "帽子",
+                    fileName: "hat.txt"
+                },
+                {
+                    type: "衣服",
+                    fileName: "clothing.txt"
+                },
+                {
+                    type: "鞋子",
+                    fileName: "shoe.txt"
+                },
+                {
+                    type: "袍",
+                    fileName: "robe.txt"
+                },
+                {
+                    type: "藥水",
+                    fileName: "potion.txt"
+                },
+                {
+                    type: "料理",
+                    fileName: "cooking.txt"
                 },
             ];
             let findObject = types.find(object => object.type == type);
