--- a/collect_data.html
+++ b/collect_data.html
@@ -77,99 +77,124 @@
 <body>
     <!-- Header -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">魔力寶貝超強官網</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <!-- 還沒做完 -->
-                    <span><a class="nav-link" href="index.html">首頁</a></span>
-                </li>
-                <li class="nav-item dropdown">
-                    <!-- 做完 -->
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink1" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        採集資料
-                    </a>
-                    <!-- .dropdown-menu 下拉選單內容 -->
-                    <div style="padding: 0; margin:0;" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink1">
-                        <a class="dropdown-item" href="collect_data.html?type=挖礦">挖礦</a>
-                        <a class="dropdown-item" href="collect_data.html?type=狩獵">狩獵</a>
-                        <a class="dropdown-item" href="collect_data.html?type=伐木">伐木</a>
-                        <a class="dropdown-item" href="collect_data.html?type=製作用布販賣點">製作用布販賣點</a>
-                    </div>
-                </li>
-
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        製作資料
-                    </a>
-                    <!-- .dropdown-menu 下拉選單內容 -->
-                    <div style="padding: 0; margin:0;" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <h6 class="dropdown-title"><b>重型武器-橫掃競技場</b></h6>
-                        <a class="dropdown-item" href="production_information.html?type=劍">劍</a>
-                        <a class="dropdown-item" href="production_information.html?type=斧">斧</a>
-                        <a class="dropdown-item" href="production_information.html?type=槍">槍</a>
-                        <a class="dropdown-item" href="production_information.html?type=弓">弓</a>
-                        <h6 class="dropdown-title"><b>輕型武器-打爆冰樹</b></h6>
-                        <a class="dropdown-item" href="#">小刀</a>
-                        <a class="dropdown-item" href="#">杖</a>
-                        <a class="dropdown-item" href="#">迴力</a>
-                        <h6 class="dropdown-title"><b>重型防具-讓三龍害怕</b></h6>
-                        <a class="dropdown-item" href="#">盔</a>
-                        <a class="dropdown-item" href="#">鎧甲</a>
-                        <a class="dropdown-item" href="#">靴子</a>
-                        <a class="dropdown-item" href="#">盾</a>
-                        <h6 class="dropdown-title"><b>輕型防具-真的輕</b></h6>
-                        <a class="dropdown-item" href="#">帽子</a>
-                        <a class="dropdown-item" href="#">衣服</a>
-                        <a class="dropdown-item" href="#">鞋子</a>
-                        <a class="dropdown-item" href="#">袍</a>
-                        <h6 class="dropdown-title"><b>仙丹妙藥</b></h6>
-                        <a class="dropdown-item" href="#">料理</a>
-                        <a class="dropdown-item" href="#">藥水</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        技能資料
-                    </a>
-                    <!-- .dropdown-menu 下拉選單內容 -->
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">人物技能</a>
-                        <a class="dropdown-item" href="#">人物技能(New)</a>
-                        <a class="dropdown-item" href="#">寵物技能</a>
-                        <a class="dropdown-item" href="#">技能屋進入証</a>
-                        <a class="dropdown-item" href="#">寵物技能屋</a>
-                        <a class="dropdown-item" href="#">耗魔變化道具</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="pet_information.html">寵物資料</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="role_related.html">角色相關</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="pet_equipment.html">寵物裝備資料</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="prop_library.html">初心道具</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="game_task.html">遊戲任務</a>
-
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="gashapon_library.html">扭蛋資料</a>
-                </li>
-
-            </ul>
+      <a class="navbar-brand" href="#">魔力寶貝永恆回憶</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <!-- 還沒做完 -->
+            <span><a class="nav-link" href="index.html">首頁</a></span>
+          </li>
+          <li class="nav-item dropdown">
+            <!-- collect_data.html採集資料 -->
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink1" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              採集資料
+            </a>
+            <!-- .dropdown-menu 下拉選單內容 -->
+            <div style="padding: 0; margin:0;" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink1">
+              <a class="dropdown-item" href="collect_data.html?type=挖礦">挖礦</a>
+              <a class="dropdown-item" href="collect_data.html?type=狩獵">狩獵</a>
+              <a class="dropdown-item" href="collect_data.html?type=伐木">伐木</a>
+              <a class="dropdown-item" href="collect_data.html?type=製作用布販賣點">製作用布販賣點</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              製作資料
+            </a>
+            <!-- .dropdown-menu 下拉選單內容 -->
+            <div style="padding: 0; margin:0;" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <h6 class="dropdown-title"><b>重型武器-橫掃競技場</b></h6>
+              <a class="dropdown-item" href="production_information.html?type=劍">劍</a>
+              <a class="dropdown-item" href="production_information.html?type=斧">斧</a>
+              <a class="dropdown-item" href="production_information.html?type=槍">槍</a>
+              <a class="dropdown-item" href="production_information.html?type=弓">弓</a>
+              <h6 class="dropdown-title"><b>輕型武器-打爆冰樹</b></h6>
+              <a class="dropdown-item" href="production_information.html?type=小刀">小刀</a>
+              <a class="dropdown-item" href="production_information.html?type=杖">杖</a>
+              <a class="dropdown-item" href="production_information.html?type=迴力">迴力</a>
+              <h6 class="dropdown-title"><b>重型防具-讓三龍害怕</b></h6>
+              <a class="dropdown-item" href="production_information.html?type=盔">盔</a>
+              <a class="dropdown-item" href="production_information.html?type=鎧甲">鎧甲</a>
+              <a class="dropdown-item" href="production_information.html?type=靴子">靴子</a>
+              <a class="dropdown-item" href="production_information.html?type=盾">盾</a>
+              <h6 class="dropdown-title"><b>輕型防具-真的輕</b></h6>
+              <a class="dropdown-item" href="production_information.html?type=帽子">帽子</a>
+              <a class="dropdown-item" href="production_information.html?type=衣服">衣服</a>
+              <a class="dropdown-item" href="production_information.html?type=鞋子">鞋子</a>
+              <a class="dropdown-item" href="production_information.html?type=袍">袍</a>
+              <h6 class="dropdown-title"><b>仙丹妙藥</b></h6>
+              <a class="dropdown-item" href="production_information.html?type=料理">料理</a>
+              <a class="dropdown-item" href="production_information.html?type=藥水">藥水</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              技能資料
+            </a>
+            <!-- .dropdown-menu 下拉選單內容 -->
+            <!-- 還沒做完 -->
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="Skill Profile.html">人物技能</a>
+              <a class="dropdown-item" href="#">人物技能(New)</a>
+              <a class="dropdown-item" href="#">寵物技能</a>
+              <a class="dropdown-item" href="#">技能屋進入証</a>
+              <a class="dropdown-item" href="#">寵物技能屋</a>
+              <a class="dropdown-item" href="#">耗魔變化道具</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="pet_information.html">寵物資料</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="role_related.html">角色相關</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="pet_equipment.html">寵物裝備資料</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="prop_library.html">初心道具</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="game_task.html">遊戲任務</a>
+  
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="Capsule & change picture" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                扭蛋&改圖
+              </a>
+              <!-- .dropdown-menu 下拉選單內容 -->
+              <!-- 還沒做完 -->
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="Gacha.txt">扭蛋資訊</a>
+                <a class="dropdown-item" href="wrist wheel.txt">各職業腕輪屬性</a>
+                <a class="dropdown-item" href="Regional Gacha.txt">各地區扭蛋機</a>
+                <a class="dropdown-item" href="Game Makeover.txt">遊戲可 改造寵物</a>
+                <a class="dropdown-item" href="Activity changed to pet">活動可 改造寵物</a>
+                <a class="dropdown-item" href="fragments">變異碎片兌換</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                國家地圖
+              </a>
+              <!-- .dropdown-menu 下拉選單內容 -->
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" href="#">法蘭王國</a>
+                <a class="dropdown-item" href="#">亞諾曼王國</a>
+                <a class="dropdown-item" href="#">蘇國</a>
+                <a class="dropdown-item" href="#">艾爾巴尼亞國</a>
+                <a class="dropdown-item" href="#">精靈王國</a>
+              </div>
+              </li>
+          </ul>
         </div>
     </nav>
 
@@ -178,7 +203,7 @@
     <!-- 首頁 -->
     <main>
         <div id="title-container" class="d-flex flex-row align-content-start flex-wrap">
-            <h2 id="title" class="col-5">製作資料</h2>
+            <h2 id="title" class="col-5">採集資料</h2>
             <div class="d-flex flex-row align-content-start flex-wrap">
                 <div class="p-2">
                     <label class="btn btn-outline-dark" for="btn-check-outlined1"><a
