--- a/pet_information.html
+++ b/pet_information.html
@@ -48,7 +48,7 @@
 <body>
   <!-- Header -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">魔力寶貝超強官網</a>
+    <a class="navbar-brand" href="#">魔力寶貝永恆回憶</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -60,7 +60,7 @@
           <span><a class="nav-link" href="index.html">首頁</a></span>
         </li>
         <li class="nav-item dropdown">
-          <!-- 做完 -->
+          <!-- collect_data.html採集資料 -->
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink1" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             採集資料
@@ -73,7 +73,6 @@
             <a class="dropdown-item" href="collect_data.html?type=製作用布販賣點">製作用布販賣點</a>
           </div>
         </li>
-
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
@@ -111,8 +110,9 @@
             技能資料
           </a>
           <!-- .dropdown-menu 下拉選單內容 -->
+          <!-- 還沒做完 -->
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">人物技能</a>
+            <a class="dropdown-item" href="Skill Profile.html">人物技能</a>
             <a class="dropdown-item" href="#">人物技能(New)</a>
             <a class="dropdown-item" href="#">寵物技能</a>
             <a class="dropdown-item" href="#">技能屋進入証</a>
@@ -135,14 +135,36 @@
         <li class="nav-item">
           <a class="nav-link" href="game_task.html">遊戲任務</a>
 
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="gashapon_library.html">扭蛋資料</a>
-        </li>
-
-      </ul>
-    </div>
-  </nav>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="Capsule & change picture" id="navbarDropdownMenuLink" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              扭蛋&改圖
+            </a>
+            <!-- .dropdown-menu 下拉選單內容 -->
+            <!-- 還沒做完 -->
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="Gacha.txt">扭蛋資訊</a>
+              <a class="dropdown-item" href="wrist wheel.txt">各職業腕輪屬性</a>
+              <a class="dropdown-item" href="Regional Gacha.txt">各地區扭蛋機</a>
+              <a class="dropdown-item" href="Game Makeover.txt">遊戲可 改造寵物</a>
+              <a class="dropdown-item" href="Activity changed to pet">活動可 改造寵物</a>
+              <a class="dropdown-item" href="fragments">變異碎片兌換</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              國家地圖
+            </a>
+            <!-- .dropdown-menu 下拉選單內容 -->
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">法蘭王國</a>
+              <a class="dropdown-item" href="#">亞諾曼王國</a>
+              <a class="dropdown-item" href="#">蘇國</a>
+              <a class="dropdown-item" href="#">艾爾巴尼亞國</a>
+              <a class="dropdown-item" href="#">精靈王國</a>
+            </div>
+           </nav>
 
 
   <!-- 首頁 -->
